--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -6,6 +6,21 @@
   align-items: center;
   position: relative;
 
+  @media screen and (max-width: 800px) {
+    width: 40vw;
+
+    &:hover {
+      .image {
+        opacity: unset;
+      }
+
+      .custom-button {
+        opacity: unset;
+        display: flex;
+      }
+    }
+  }
+
   .image {
     width: 100%;
     height: 95%;
@@ -20,6 +35,13 @@
     position: absolute;
     top: 255px;
     display: none;
+
+    @media screen and (max-width: 800px) {
+      display: block;
+      opacity: 0.9;
+      min-width: unset;
+      padding: 0 10px;
+    }
   }
 
   &:hover {
